client/src/components/Web/Blog/PostInfo/PostInfo.scss
@import "../../../../scss/variables";
.ant-row{
    @media (max-width: 450px){
        display: inline-block;
        width: 100%;
    }
}

.post-info {
    margin-top: 50px;
    overflow: hidden;

    @media (max-width: 450px){
        margin-top: 10px;
    }

    img{


        @media (max-width: 450px){
            width: 95%;
            height: auto;
        }
    }

    &__title {
        text-align: center;
        letter-spacing: 2px;
        font-family: $body-font;
        margin-bottom: 1%;
        color: $font-light;
        font-weight: bold;
        font-size: 40px;
        text-transform: capitalize;

        @media (max-width: 450px){
            display: block;
            width: 100%;
            padding-left: 5%;
            padding-right: 5%;
            font-size: 30px;
            margin-bottom: 2%;
        }
    }

    &__creation-date {
        text-align: center;
        font-family: $body-font;
        letter-spacing: 1px;
        color: $font-light;
        width: 100%;
        margin-bottom: 30px;
        text-decoration: underline;
        text-decoration-color: $azul-aparente;

        @media (max-width: 450px){
            margin-top: 15px;
            margin-bottom: 40px;
        }
    }

    &__tags {
        text-align: right;
        margin-bottom: 70px;
        text-transform: capitalize;
        

        @media (max-width: 450px){
            margin-top: 15px;
            margin-bottom: 40px;
        }

        .ant-tag{
            cursor: pointer;
        }
    }

    &__description {
        color: rgb(215,215,215);
        font-family: $titles-font;
        font-size: 18px;
        margin-bottom: 5%;

        blockquote{
            font-family: $body-font;
            font-style: italic;
            font-size: 22px;
            text-align: center;

            @media (max-width: 450px){
                font-size: 18px;
            }
        }

        @media (max-width: 450px){
            width: 100%;
            padding-left: 5%;
            padding-right: 5%;
            font-size: 14px;

            p{
                display: inline-block;
                margin-left: 1%;
                margin-right: 1%;
            }

            img{
                width: 95%;
                height: auto;
            }
        }
    }
    .social-share{
        text-align: center;
        margin-bottom: 5%;
        
        h3{
            color: white;
            margin-bottom: 4%;
            font-family: $titles-font;
            font-weight: bold;

            @media (max-width: 450px){
                font-size: 22px;
            }
        }

        button {
            margin-left: 2%;

            @media (max-width: 450px) {
                width: 100px;
                display: inline-block;
                margin-top: 4%;
            }
            
            &:hover{
                border: 1px solid $azul-aparente;
            }
        }
    }

    .hyvor-talk{
        width: 100%;
        margin: 0 auto;

        @media (max-width: 950px){
            width: 90%;
        }
    }

    .ant-anchor{
        background-color: $negro-aparente;

    }

    .ant-anchor-ink::before{
        background-color: $negro-aparente;
    }

    .ant-anchor-wrapper{
        background-color: $negro-aparente;
    }
}

